7127660: (macosx) *Socket Async close not working Reviewed-by: alanb, phh, ohair